# docker-credential-gcr

./: .gitignore  .goreleaser.yml  .travis.yml  BUILD  BUILD.bazel  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go  repositories.bzl
.github/workflows/: release.yml  test.yml
api/: clear.go  common.go  config.go  configure-docker.go  configure-docker_unit_test.go  dockerHelper.go  gcr-login.go  gcr-logout.go  version.go
auth/: BUILD  BUILD.bazel  login.go  login_integration_test.go
cli/: BUILD  BUILD.bazel  clear.go  config.go  configure-docker.go  configure-docker_unit_test.go  dockerHelper.go  gcr-login.go  gcr-logout.go  version.go
computemetadata/: computemetadata.go  computemetadata_test.go
config/: BUILD  BUILD.bazel  config.go  config_file_unit_test.go  const.go  file.go
credhelper/: BUILD  BUILD.bazel  helper.go  helper_integration_test.go  helper_unit_test.go
mock/mock_cmd/: BUILD  mocks.go
mock/mock_config/: BUILD  mocks.go
mock/mock_store/: BUILD  mocks.go
store/: BUILD  BUILD.bazel  store.go  store_integration_test.go  store_unit_test.go
test/: BUILD  BUILD.bazel  config_test.go  const.go  e2e_test.go  travis_test.go  util.go  version_test.go
util/: BUILD.bazel  util.go  util_unit_test.go
util/dockercmd/: exec.go
