load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/docker-credential-gcr",
    visibility = ["//visibility:private"],
    deps = [
        "//cli:go_default_library",
        "//vendor/github.com/google/subcommands:go_default_library",
    ],
)

go_binary(
    name = "docker-credential-gcr",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
